syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
    rpc AdminLogin(AdminLoginRequest) returns (AdminLoginResponse) {}
    rpc UserLogin(UserLoginRequest) returns (UserLoginResponse) {}
    rpc UserSignup(UserSignupRequest) returns (UserSignupResponse) {}
    rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

message AdminLoginRequest {
    string email = 1;
    string password = 2;
}

message AdminLoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
}

message UserLoginRequest {
    string email = 1;
    string password = 2;
}

message UserLoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
}

message UserSignupRequest {
    string firstname = 1;
    string lastname = 2;
    string email = 3;
    string password = 4;
    uint64 phone = 5;
}

message UserSignupResponse {
    int64 status = 1;
    string error = 2;
}

message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
  string role = 5;
}